# devops-experiments

./: README.md  pyproject.toml
src/apicomplexoperations/: install_requirements.sh
src/apicomplexoperations/dep/: complexoperations_iperoyg-0.1.5-py3-none-any.whl
