[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "complexoperations_iperoyg"
version = "0.1.5"
authors = [
  { name="Arthur Iperoyg", email="iperoyg@gmail.com" },
  { name="Ramon Durães", email="ramongduraes@gmail.com" },
]
description = "Complex Operations Package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ramongduraes/devops-experiments"
"Bug Tracker" = "https://github.com/ramongduraes/devops-experiments/issues"